--- a/html/equipe.html
+++ b/html/equipe.html
@@ -31,6 +31,7 @@
                   <li class="nav-item"><a href="./gamificacao.html" class="nav-link">Gamificação</a></li>
                   <li class="nav-item"><a href="./contato.html" class="nav-link">Contato</a></li>
                   <li class="nav-item"><a href="./equipe.html" class="nav-link">Sobre o projeto</a></li>
+                  <li class="nav-item"><a href="./video.html" class="nav-link">Video Pitch</a></li>
               </ul>
           </div>
       </nav>
@@ -69,6 +70,21 @@
             </div>
           </div>
         </div>
+    </div>
+
+    <div class="cardt">
+      <div class="card-body">
+        Durante o projeto, utilizamos as seguintes ferramentas:
+        <ul>
+          <li>Html e css</li>
+          <li>Bootstrap</li>
+          <li>Javascript</li>
+          <li>Encadeamento if else</li>
+          <li>Operações lógicas</li>
+          <li>Criação de menu</li>
+          <li>Criação de formulários</li>
+        </ul>
+      </div>
     </div>
 
   <!--Barra Horizontal-->
