--- a/html/gamificacao.html
+++ b/html/gamificacao.html
@@ -32,6 +32,7 @@
                     <li class="nav-item"><a href="./gamificacao.html" class="nav-link">Gamificação</a></li>
                     <li class="nav-item"><a href="./contato.html" class="nav-link">Contato</a></li>
                     <li class="nav-item"><a href="./equipe.html" class="nav-link">Sobre o projeto</a></li>
+                    <li class="nav-item"><a href="./video.html" class="nav-link">Video Pitch</a></li>
                 </ul>
             </div>
         </nav>
@@ -40,7 +41,7 @@
   
   <!--Parágrafo e Gamificação Banho-->
   <div class="paragrafo-banho">
-    <h3 style="font-size: 55px;color:blue;font-weight: 900;">H2O</h3>
+    <h3 style="font-size: 55px;color:blue;font-weight: 900;border-bottom: 1px solid black;">H2O</h3>
   <p>O ato diário de tomar um banho é um luxo moderno que muitas vezes não consideramos de forma completa.</p>
   <p>Enquanto a água escorre pelo chuveiro, poucos de nós param para refletir sobre o impacto ambiental desse gesto aparentemente inofensivo.</p>
   <p>Tomar banho é uma atividade que, em média, consome uma quantidade significativa de água. Um chuveiro padrão libera cerca de 9 a 10 litros de água por minuto. Se considerarmos um banho médio de 10 a 15 minutos, estamos falando de 90 a 150 litros de água sendo utilizados em um único banho. Esses números podem variar com base na pressão da água, no tipo de chuveiro e nos hábitos individuais.</p>
@@ -50,7 +51,7 @@
   <div class="container text-center mt-5" style="border-radius:5px 5px 0 0 ;">
     <div class="row align-items-start">
       <div class="col">
-        5 a 7 min
+        5 a 7 minutos
       </div>
       <div class="col" style="color: blue">
         Você é economico no chuveiro
@@ -63,7 +64,7 @@
   <div class="container text-center">
     <div class="row align-items-center">
       <div class="col">
-        8 a 15 min
+        8 a 15 minutos
       </div>
       <div class="col" style="color: yellow;">
         Você é moderado no chuveiro
@@ -76,10 +77,10 @@
   </div>
   <div class="container text-center" style="border-radius: 0 0 5px 5px;">
     <div class="row align-items-end">
-      <div class="col">
+      <div class="col" style="margin-bottom: 25px;">
         15 ou mais minutos
       </div>
-      <div class="col" style="color: red;">
+      <div class="col" style="color: red; margin-bottom: 25px;">
         Você deperdiça muita água
       </div>
       <div class="col" style="color: red;">
@@ -88,15 +89,18 @@
     </div>
   </div>
   </div>
+  <p style="margin-bottom: 50px;margin-top: 50px;">Imagine o quanto 5 minutos no chuveiro pode impactar nossas vidas, isso equivale a dois galões cheios de 20 litros cada um!</p>
+  <img src="../img/homem carregando galão de agua.JPG" alt="homem carregando dois galoes de agua - sertão do Nordeste" style="width: 30%;height: 30%;border-radius: 5px;">
+  <p style="margin-top: 50px; margin-left: 10px;">Este deperdício de agua impacta as comunidades que não tem acesso a água potável, que muitas vezes precisa sair de suas casas e percorrer longas horas para buscar esta água!</p>
 
-<h5 style="font-size: 30px;color: gold;font-weight: 600;margin-top: 120px;margin-bottom: 50px;">Pequenas Mudanças, Grandes Resultados:</h5>
-<p style="margin-top: 30px;">No ritmo frenético de nossas vidas modernas, é fácil deixar passar despercebido o impacto ambiental das atividades mais simples. Tomar um banho, por exemplo, é um ato de relaxamento que muitas vezes não associamos a questões ambientais. No entanto, a conscientização sobre o consumo de água no chuveiro pode resultar em mudanças positivas surpreendentes.</p>
+<h5 style="font-size: 30px;color: gold;font-weight: 600;margin-top: 120px;margin-bottom: 50px;border-bottom: 1px solid black;">Pequenas Mudanças, Grandes Resultados:</h5>
+<p style="margin-top: 30px; margin-left: 5px;">No ritmo frenético de nossas vidas modernas, é fácil deixar passar despercebido o impacto ambiental das atividades mais simples. Tomar um banho, por exemplo, é um ato de relaxamento que muitas vezes não associamos a questões ambientais. No entanto, a conscientização sobre o consumo de água no chuveiro pode resultar em mudanças positivas surpreendentes.</p>
 <div class="lado-img">
 <p>Uma abordagem consciente em relação ao tempo gasto no chuveiro pode ter um impacto considerável. Reduzir o tempo de banho, mesmo que seja apenas de alguns minutos, pode acumular economias significativas de água ao longo do tempo. Isso não apenas preserva um recurso essencial, mas também ajuda a diminuir a pegada hídrica de nossas atividades diárias.</p>
 <p>Além disso, a escolha de instalações mais eficientes pode ter um efeito notável. A instalação de redutores de vazão ou chuveiros de baixo fluxo é uma maneira simples e prática de economizar água, sem sacrificar a qualidade do banho. Esses pequenos ajustes demonstram como a inovação pode desempenhar um papel fundamental na promoção de práticas mais sustentáveis.</p>
 <img src="../img/foto de chuveiro.webp" alt="chuveiro saindo agua" class="foto-chuveiro">
-<p>Uma sugestão criativa para economizar água é coletar a água fria que sai inicialmente do chuveiro enquanto espera que ela esquente. Essa água aparentemente desperdiçada pode ser reaproveitada para tarefas domésticas, como regar plantas ou limpar superfícies. Essa prática simples exemplifica como pequenos atos podem ter um impacto mais amplo.</p>
-<p>Em última análise, cada ação consciente conta. As mudanças que fazemos em nossos hábitos diários, como tomar banhos mais curtos, usar instalações eficientes e ajustar a temperatura da água, contribuem para um futuro mais sustentável. Ao adotar essas práticas, não apenas estamos preservando recursos valiosos, mas também estamos cultivando uma mentalidade de respeito pela natureza. O caminho para um planeta mais saudável começa em nossas próprias casas, um chuveiro de cada vez.</p></div>
+<p style="margin-left: 10px;">Uma sugestão criativa para economizar água é coletar a água fria que sai inicialmente do chuveiro enquanto espera que ela esquente. Essa água aparentemente desperdiçada pode ser reaproveitada para tarefas domésticas, como regar plantas ou limpar superfícies. Essa prática simples exemplifica como pequenos atos podem ter um impacto mais amplo.</p>
+<p style="margin-left: 5px;">Em última análise, cada ação consciente conta. As mudanças que fazemos em nossos hábitos diários, como tomar banhos mais curtos, usar instalações eficientes e ajustar a temperatura da água, contribuem para um futuro mais sustentável. Ao adotar essas práticas, não apenas estamos preservando recursos valiosos, mas também estamos cultivando uma mentalidade de respeito pela natureza. O caminho para um planeta mais saudável começa em nossas próprias casas, um chuveiro de cada vez.</p></div><br>
 </div>
 
 <!--Parágrafo e Gamificação Banho-->
@@ -104,19 +108,19 @@
   
   <!--Titulo Luz-->
 <div class="paragrafo-luz">
-  <h3 style="font-size: 55px;color:rgb(46, 44, 44);font-weight: 900;">Luz</h3>
+  <h3 style="font-size: 55px;color:rgb(46, 44, 44);font-weight:900;border-bottom: 1px solid black;">Luz</h3>
   <!--Titulo Luz-->
   
   <p>A luz é uma parte indispensável da nossa vida cotidiana, mas muitas vezes não percebemos o quanto seu uso impacta nosso consumo de energia e o meio ambiente. Neste texto, exploraremos o gasto de luz em nossas casas, destacando como pequenas escolhas conscientes podem fazer uma grande diferença na redução do consumo energético e na preservação dos recursos naturais.</p>
   <p>Quando acendemos uma lâmpada em nossa casa, raramente consideramos a jornada da energia elétrica que torna isso possível. A eletricidade é gerada em usinas, muitas das quais dependem de fontes não renováveis, como carvão, petróleo e gás natural. O processo de geração, transmissão e distribuição dessa energia consome recursos naturais e emite gases de efeito estufa, contribuindo para as mudanças climáticas.</p>
-  <p>Pequenas mudanças em nossos comportamentos diários podem ter um efeito positivo. Optar por aparelhos e eletrônicos eficientes em termos de energia, desligar dispositivos quando não estão em uso e usar iluminação apenas quando necessário são maneiras de reduzir nosso consumo de energia. Além disso, o uso de energias renováveis, como a solar e eólica, pode contribuir para a mitigação dos impactos ambientais.</p>
+  <p style="margin-left: 5px;">Pequenas mudanças em nossos comportamentos diários podem ter um efeito positivo. Optar por aparelhos e eletrônicos eficientes em termos de energia, desligar dispositivos quando não estão em uso e usar iluminação apenas quando necessário são maneiras de reduzir nosso consumo de energia. Além disso, o uso de energias renováveis, como a solar e eólica, pode contribuir para a mitigação dos impactos ambientais.</p>
   <p>Ao adotar práticas mais conscientes em relação ao consumo de energia elétrica, estamos contribuindo para a preservação do meio ambiente e para a sustentabilidade do nosso planeta. Cada ação individual conta, e juntos podemos criar um impacto significativo para um futuro mais limpo e saudável.</p>
   <img src="../img/luz.jpg" alt="varias lampadas, somente uma acesa no meio" class="foto-luz">
 
 </div>
   <!--Gamificação Luz-->
   <div id="container-luz">
-    <label for="valor">Digite o valor de gasto mensal de luz:</label>
+    <label for="valor" style="color: gold;">Digite o valor de gasto mensal de luz em Killowatts:</label>
     <input type="number" id="valor" placeholder="Digite o gasto mensal em Killowatts(Kwh)" style="margin-left: 10px;"><br>
     <button type="button" class="btn btn-warning" id="calcular" onclick="calcular()">Calcular</button><br>
     <label for="valor" id="resposta" style="margin-top: 10px;">Aqui fica sua resposta</label>
@@ -130,12 +134,12 @@
   <!--Gamificação Economia para o seu bolso conta de Luz-->
   <div id="paragrafo-economia">
       <!--Titulo Economia pro seu bolso-->
-  <h3 style="font-size: 55px;color: gold;font-weight: 900;">Economizando seu bolso</h3>
+  <h3 style="font-size: 55px;color: gold;font-weight: 900;border-bottom: 1px solid black;">Economizando seu bolso</h3>
   <!--Titulo Economia pro seu bolso-->
     <p>Buscar maneiras de economizar no orçamento doméstico é uma atitude inteligente e responsável, e uma das áreas onde podemos fazer isso é reduzindo os gastos com água e energia elétrica.</p>
-    <p>Além de aliviar a pressão financeira, essa abordagem também contribui para um estilo de vida mais sustentável, ajudando a preservar nossos recursos naturais e reduzir a pegada de carbono.</p>
+    <p style="margin-left: 10px;">Além de aliviar a pressão financeira, essa abordagem também contribui para um estilo de vida mais sustentável, ajudando a preservar nossos recursos naturais e reduzir a pegada de carbono.</p>
     
-    <label for="custo" style="font-size: 20px; font-weight: 600;">Digite o gasto mensal de sua conta de água e luz:</label>
+    <label for="custo" style="font-size: 20px; font-weight: 400;color: gold;">Digite o gasto mensal de sua conta de água e luz:</label>
     <input type="number" id="custo" placeholder="Digite aqui" style="margin-left: 13px;"><br>
     <button id="botao" class="btn btn-success" onclick="custoMensal()">Calcular</button>
     <label for="custo" id="result"></label>
