--- a/html/contato.html
+++ b/html/contato.html
@@ -32,6 +32,7 @@
                   <li class="nav-item"><a href="./gamificacao.html" class="nav-link">Gamificação</a></li>
                   <li class="nav-item"><a href="./contato.html" class="nav-link">Contato</a></li>
                   <li class="nav-item"><a href="./equipe.html" class="nav-link">Sobre o projeto</a></li>
+                  <li class="nav-item"><a href="./video.html" class="nav-link">Video Pitch</a></li>
               </ul>
           </div>
       </nav>
