--- a/html/gamificacao.html
+++ b/html/gamificacao.html
@@ -44,7 +44,7 @@
     <h3 style="font-size: 55px;color:blue;font-weight: 900;border-bottom: 1px solid black;">H2O</h3>
   <p>O ato diário de tomar um banho é um luxo moderno que muitas vezes não consideramos de forma completa.</p>
   <p>Enquanto a água escorre pelo chuveiro, poucos de nós param para refletir sobre o impacto ambiental desse gesto aparentemente inofensivo.</p>
-  <p>Tomar banho é uma atividade que, em média, consome uma quantidade significativa de água. Um chuveiro padrão libera cerca de 9 a 10 litros de água por minuto. Se considerarmos um banho médio de 10 a 15 minutos, estamos falando de 90 a 150 litros de água sendo utilizados em um único banho. Esses números podem variar com base na pressão da água, no tipo de chuveiro e nos hábitos individuais.</p>
+  <p style="margin-left: 15px;">Tomar banho é uma atividade que, em média, consome uma quantidade significativa de água. Um chuveiro padrão libera cerca de 9 a 10 litros de água por minuto. Se considerarmos um banho médio de 10 a 15 minutos, estamos falando de 90 a 150 litros de água sendo utilizados em um único banho. Esses números podem variar com base na pressão da água, no tipo de chuveiro e nos hábitos individuais.</p>
   <div id="banho">Clique Aqui </div>
 
 <div style="border:2px solid black; margin-top: 10px;">
@@ -91,13 +91,13 @@
   </div>
   <p style="margin-bottom: 50px;margin-top: 50px;">Imagine o quanto 5 minutos no chuveiro pode impactar nossas vidas, isso equivale a dois galões cheios de 20 litros cada um!</p>
   <img src="../img/homem carregando galão de agua.JPG" alt="homem carregando dois galoes de agua - sertão do Nordeste" style="width: 30%;height: 30%;border-radius: 5px;">
-  <p style="margin-top: 50px; margin-left: 10px;">Este deperdício de agua impacta as comunidades que não tem acesso a água potável, que muitas vezes precisa sair de suas casas e percorrer longas horas para buscar esta água!</p>
+  <p style="margin-top: 50px; margin-left: 10px;">Este deperdício de água impacta as comunidades que não tem acesso a água potável, que muitas vezes precisam sair de suas casas e percorrer longas horas para buscar esta água!</p>
 
 <h5 style="font-size: 30px;color: gold;font-weight: 600;margin-top: 120px;margin-bottom: 50px;border-bottom: 1px solid black;">Pequenas Mudanças, Grandes Resultados:</h5>
 <p style="margin-top: 30px; margin-left: 5px;">No ritmo frenético de nossas vidas modernas, é fácil deixar passar despercebido o impacto ambiental das atividades mais simples. Tomar um banho, por exemplo, é um ato de relaxamento que muitas vezes não associamos a questões ambientais. No entanto, a conscientização sobre o consumo de água no chuveiro pode resultar em mudanças positivas surpreendentes.</p>
 <div class="lado-img">
 <p>Uma abordagem consciente em relação ao tempo gasto no chuveiro pode ter um impacto considerável. Reduzir o tempo de banho, mesmo que seja apenas de alguns minutos, pode acumular economias significativas de água ao longo do tempo. Isso não apenas preserva um recurso essencial, mas também ajuda a diminuir a pegada hídrica de nossas atividades diárias.</p>
-<p>Além disso, a escolha de instalações mais eficientes pode ter um efeito notável. A instalação de redutores de vazão ou chuveiros de baixo fluxo é uma maneira simples e prática de economizar água, sem sacrificar a qualidade do banho. Esses pequenos ajustes demonstram como a inovação pode desempenhar um papel fundamental na promoção de práticas mais sustentáveis.</p>
+<p style="margin-left: 15px;">Além disso, a escolha de instalações mais eficientes pode ter um efeito notável. A instalação de redutores de vazão ou chuveiros de baixo fluxo é uma maneira simples e prática de economizar água, sem sacrificar a qualidade do banho. Esses pequenos ajustes demonstram como a inovação pode desempenhar um papel fundamental na promoção de práticas mais sustentáveis.</p>
 <img src="../img/foto de chuveiro.webp" alt="chuveiro saindo agua" class="foto-chuveiro">
 <p style="margin-left: 10px;">Uma sugestão criativa para economizar água é coletar a água fria que sai inicialmente do chuveiro enquanto espera que ela esquente. Essa água aparentemente desperdiçada pode ser reaproveitada para tarefas domésticas, como regar plantas ou limpar superfícies. Essa prática simples exemplifica como pequenos atos podem ter um impacto mais amplo.</p>
 <p style="margin-left: 5px;">Em última análise, cada ação consciente conta. As mudanças que fazemos em nossos hábitos diários, como tomar banhos mais curtos, usar instalações eficientes e ajustar a temperatura da água, contribuem para um futuro mais sustentável. Ao adotar essas práticas, não apenas estamos preservando recursos valiosos, mas também estamos cultivando uma mentalidade de respeito pela natureza. O caminho para um planeta mais saudável começa em nossas próprias casas, um chuveiro de cada vez.</p></div><br>
@@ -123,7 +123,7 @@
     <label for="valor" style="color: gold;">Digite o valor de gasto mensal de luz em Killowatts:</label>
     <input type="number" id="valor" placeholder="Digite o gasto mensal em Killowatts(Kwh)" style="margin-left: 10px;"><br>
     <button type="button" class="btn btn-warning" id="calcular" onclick="calcular()">Calcular</button><br>
-    <label for="valor" id="resposta" style="margin-top: 10px;">Aqui fica sua resposta</label>
+    <label for="valor" id="resposta" style="margin-top: 10px;margin-bottom: 60px;">Aqui fica sua resposta</label>
   </div>
   <br><br>
   <!--Gamificação Luz-->
