mais atualização de formtação

--- a/html/contato.html
+++ b/html/contato.html
@@ -39,16 +39,17 @@
   </header>
     <!--Menu-->
   <div id="formulario-principal">  
-  <h1 style="color: gold;border-bottom: 2px solid black;">Contato</h1>
-    <h2>Entre em contato com a gente para receber mais novidades:</h2>
-    
+  <h1 id="Contato">Contato</h1>
+    <div class="div1">
+    <h2>Entre em contato com a gente para receber mais novidades</h2>
+    </div>
     <!--Formulário-->
     <form action="form" id="formulario">
-        <label for="name" style="margin-top: 35px;">Nome completo</label><br>
+        <label for="name" style="margin-top: 35px;">Nome completo:</label><br>
         <input type="text" id="nameComplete"><br>
-        <label for="cellnumber">Telefone</label><br>
+        <label for="cellnumber">Telefone:</label><br>
         <input type="number" id="cellnumber"><br>
-        <label for="gmail">Email</label><br>
+        <label for="gmail">Email:</label><br>
         <input type="text" id="email"><br>
         <input type="text" name="resposta" id="resposta" placeholder="Digite algo"><br>
         <button type="button" class="btn btn-dark">Enviar</button>
