--- a/html/gamificacao.html
+++ b/html/gamificacao.html
@@ -41,7 +41,7 @@
   
   <!--Parágrafo e Gamificação Banho-->
   <div class="paragrafo-banho">
-    <h3 style="font-size: 55px;color:#00ffd2c4;font-weight: 900;border-bottom: 1px solid black;">Teste de econômia de água no Banho</h3>
+    <h3 style="font-size: 55px;color:#00ffd2c4;font-weight: 900;border-bottom: 1px solid black;">Teste de econômia de água no banho</h3>
     <div class="flex-container_banho">
       <div class="box1">
         <p>O ato diário de tomar um banho é um luxo moderno que muitas vezes não consideramos de forma completa.</p>
@@ -93,12 +93,15 @@
     </div>
   </div>
   </div>
-  <div class="div1">
+  <div class="div2">
     <p style="margin-bottom: 50px;margin-top: 50px;">Imagine o quanto 5 minutos no chuveiro pode impactar nossas vidas, isso equivale a dois galões cheios de 20 litros cada um!</p>
   </div>
-    <img src="../img/homem carregando galão de agua.JPG" alt="homem carregando dois galoes de agua - sertão do Nordeste" style="width: 30%;height: 30%;border-radius: 5px;">
+    <img id="img_galao" src="../img/homem carregando galão de agua.JPG" alt="homem carregando dois galoes de agua - sertão do Nordeste" style="width: 30%;height: 30%;border-radius: 5px;">
   <div class="div1">
-    <p style="margin-top: 50px; margin-left: 10px;">Este deperdício de água impacta as comunidades que não tem acesso a água potável, que muitas vezes precisam sair de suas casas e percorrer longas horas para buscar esta água!</p>
+    <p style="margin-top: 50px; margin-left: 10px;">Este deperdício de água impacta as comunidades que não tem acesso a água potável, que muitas vezes precisam sair de suas casas e percorrer longas horas para buscar esta água! 
+      Este deperdício de água impacta as comunidades que não tem acesso a água potável, que muitas vezes precisam sair de suas casas e percorrer longas horas para buscar esta água!
+      Este deperdício de água impacta as comunidades que não tem acesso a água potável, que muitas vezes precisam sair de suas casas e percorrer longas horas para buscar esta água!
+    </p>
   </div>
 <h5 style="font-size: 30px;color: gold;font-weight: 600;margin-top: 120px;margin-bottom: 50px;border-bottom: 1px solid black;">Pequenas Mudanças, Grandes Resultados:</h5>
   <div class="flex-container_meio">
@@ -148,8 +151,8 @@
   <div id="container-luz">
     <label for="valor" style="color: gold;">Digite o valor de gasto mensal de luz em Killowatts:</label>
     <input type="number" id="valor" placeholder="Digite o gasto mensal em Killowatts(Kwh)" style="margin-left: 10px;"><br>
-    <button type="button" class="btn btn-warning" id="calcular" onclick="calcular()">Calcular</button><br>
-    <label for="valor" id="resposta" style="margin-top: 10px;margin-bottom: 60px;">Aqui fica sua resposta</label>
+    <button type="button" class="btn btn-warning" id="calcular" onclick="calcular()";>Calcular</button><br>
+    <label for="valor" id="resposta">Aqui fica sua resposta</label>
   </div>
   <br><br>
   <!--Gamificação Luz-->
